ПДТ-57 Подключен тестовый фреймворк TestNG и реализованы тесты для класса Point

--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = "Calculation"
+mainClassName = "CalculationDist"
 
 repositories {
     mavenCentral()
