--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'java'
-apply plugin: 'application'
-mainClassName = "CalculationDist"
 
 repositories {
     mavenCentral()
@@ -8,4 +6,5 @@ repositories {
 
 dependencies {
     compile 'org.testng:testng:6.14.3'
+    compile 'org.seleniumhq.selenium:selenium-java:3.14.0'
 }
