--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -12,3 +12,15 @@ dependencies {
     compile 'com.thoughtworks.xstream:xstream:1.4.11.1'
     compile 'com.google.code.gson:gson:2.8.5'
 }
+
+task testGroups(type: Test) {
+    useTestNG {  //default using JUnit. We can change it here
+        suites 'src/test/resources/testng-groups.xml'
+    }
+}
+
+task testContacts(type: Test) {
+    useTestNG {  //default using JUnit. We can change it here
+        suites 'src/test/resources/testng-contacts.xml'
+    }
+}
