--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.3.0-alpha4'
     compile 'org.hibernate:hibernate-core:5.3.7.Final'
     compile 'mysql:mysql-connector-java:8.0.13'
+    compile 'biz.futureware.mantis:mantis-axis-soap-client:1.2.19'
 }
 
 test {
