--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -9,3 +9,7 @@ repositories {
 dependencies {
     compile 'org.testng:testng:6.14.3'
 }
+
+test {
+    useTestNG()  //default using JUnit. We can change it here
+}
