Исправлен build.gradle (стоял неправильный mainClassName)

--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = "CalculationDist"
+mainClassName = "MyFirstProgram"
 
 repositories {
     mavenCentral()
