--- a/addressbook-web-tests/src/test/resources/remote.properties
+++ b/addressbook-web-tests/src/test/resources/remote.properties
@@ -1,4 +1,4 @@
 web.baseUrl = http://80.240.128.62/addressbook/
 web.adminLogin = admin
 web.adminPassword = secret
-selenium.server = http://80.240.128.62:4444/wd/hub
+selenium.server = http://80.240.128.62:4444/driver/hub
