--- a/addressbook-web-tests/src/test/resources/remote.properties
+++ b/addressbook-web-tests/src/test/resources/remote.properties
@@ -1,4 +1,4 @@
-web.baseUrl = http://localhost/addressbook/
+web.baseUrl = http://192.168.1.2/addressbook/
 web.adminLogin = admin
 web.adminPassword = secret
-selenium.server = http://192.168.1.2:4444/wd/hub
+selenium.server = 
