--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 .idea/workspace.xml
 *.log
+addressbook-web-tests/build/allure-results/*-testsuite.xml
