--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ gradle-app.setting
 .idea/workspace.xml
 *.log
 addressbook-web-tests/build/allure-results/*-testsuite.xml
+addressbook-web-tests/build/tmp/*
